--- a/client/src/style/dashboard/_index.scss
+++ b/client/src/style/dashboard/_index.scss
@@ -1,6 +1,7 @@
 @import './nav';
 @import './userCall';
 @import './projectItem';
+@import './editProject';
 
 .big_header {
     text-align: center;
