new add project form style

--- a/client/src/style/dashboard/_index.scss
+++ b/client/src/style/dashboard/_index.scss
@@ -2,6 +2,7 @@
 @import './userCall';
 @import './projectItem';
 @import './editProject';
+@import './addProject';
 
 .big_header {
     text-align: center;
