--- a/client/src/style/dashboard/_editProject.scss
+++ b/client/src/style/dashboard/_editProject.scss
@@ -1,5 +1,6 @@
 .edit_project {
     position: relative;
+
     &__header-image {
         // background-color: aquamarine;
         width: 100%;
@@ -18,7 +19,6 @@
 
     &__image {
         width: 100%;
-        // margin-top: -175px;
         filter: blur(3px);
         -webkit-filter: blur(3px);
     }
@@ -35,21 +35,48 @@
         z-index: 100;
         font-size: 1.1rem;
     }
+
+    &__texts {
+        text-align: center;
+    }
 }
 
 .image-edit-pop {
-    background-color: rgba(36, 36, 36, 0.8);
+    background-color: rgba(36, 36, 36, 0.9);
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 75vh;
+    height: clamp(470px, 80vh, 1000px);
     z-index: 1000;
 
     &__edit-window {
-        background-color: aliceblue;
-        width: 500px;
-        height: 250px;
+        background-color: rgb(255, 255, 255);
+        box-sizing: border-box;
+        padding: 2%;
+        width: clamp(250px, 60%, 1000px);
+        height: clamp(250px, 70%, 900px);
+        position: relative;
     }
 }
+
+.update_project {
+    &__form-image {
+        display: flex;
+        flex-direction: row;
+        // background-color: aqua;
+        justify-content: space-evenly;
+        width: 80%;
+        margin: 1% auto;
+    }
+    &__crop-image {
+        overflow: hidden;
+        width: 90%;
+        height: 300px;
+        position: absolute;
+        bottom: 2%;
+    }
+}
+
+.edit-page-form {margin-top: 8%;}
