--- a/client/src/style/dashboard/_editProject.scss
+++ b/client/src/style/dashboard/_editProject.scss
@@ -2,7 +2,6 @@
     position: relative;
 
     &__header-image {
-        // background-color: aquamarine;
         width: 100%;
         height: 300px;
         position: relative;
@@ -19,6 +18,7 @@
 
     &__image {
         width: 100%;
+        margin-top: -120px;
         filter: blur(3px);
         -webkit-filter: blur(3px);
     }
@@ -26,14 +26,6 @@
     &__image2 {
         width: 90%;
         margin: 0 5%;
-    }
-
-    &__btn-chenge-image {
-        position: absolute;
-        bottom: 5%;
-        left: 3%;
-        z-index: 100;
-        font-size: 1.1rem;
     }
 
     &__texts {
@@ -65,7 +57,6 @@
     &__form-image {
         display: flex;
         flex-direction: row;
-        // background-color: aqua;
         justify-content: space-evenly;
         width: 80%;
         margin: 1% auto;
@@ -80,3 +71,9 @@
 }
 
 .edit-page-form {margin-top: 8%;}
+
+.edit_btn {
+    position: absolute;
+    z-index: 1;
+    margin: 2%;
+}
