--- a/client/src/View/Components/Tiptap/_tiptapStyle.scss
+++ b/client/src/View/Components/Tiptap/_tiptapStyle.scss
@@ -32,3 +32,98 @@
     box-sizing: border-box;
     padding: 0% 1%;
 }
+
+.font_color__palet {
+    position: relative;
+
+    &--elements {
+        background-color: rgb(231, 230, 230);
+        padding: 0.5ch;
+        position: absolute;
+        top: 30px;
+        z-index: 100;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+
+        &-div {
+            // margin: 5%;
+            // width: 10vw;
+        }
+
+        button,
+        input {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
+
+        button {
+            margin: 0.5ch;
+        }
+
+        input[type="color"]::-moz-color-swatch {
+            border: none;
+        }
+
+        input[type="color"]::-webkit-color-swatch-wrapper {
+            padding: 0;
+            border-radius: 0;
+        }
+
+        input[type="color"]::-webkit-color-swatch {
+            border: none;
+        }
+    }
+
+    &--automatic-color,
+    &--more-colors,
+    &--unHightLight,
+    &--more-hightlight {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        cursor: pointer;
+
+        label {
+            cursor: pointer;
+            font-size: 13px;
+        }
+    }
+
+    &--automatic-color,
+    &--unHightLight {
+        grid-area: 1 / 1 / 2 / 6;
+        margin-bottom: 1ch;
+        padding-bottom: 1ch;
+        border-bottom: 1px solid rgb(183, 183, 183);
+    }
+
+    &--more-colors,
+    &--more-hightlight {
+        margin-top: 1ch;
+        padding: 1ch 0;
+        border-top: 1px solid rgb(181, 181, 181);
+    }
+
+    &--more-colors {
+        grid-area: 3 / 1 / 4 / 6;
+    }
+
+    &--more-hightlight {
+        grid-area: 4 / 1 / 5 / 6;
+
+    }
+
+    &--unHightLight {
+        button {
+            width: 100%;
+        }
+    }
+
+    // &--unHightLight {
+    //     button {
+    //         // font-size: 13px;
+    //     }
+
+    // }
+}
