--- a/client/src/View/Components/Tiptap/_tiptapStyle.scss
+++ b/client/src/View/Components/Tiptap/_tiptapStyle.scss
@@ -45,10 +45,10 @@
         display: grid;
         grid-template-columns: repeat(5, 1fr);
 
-        &-div {
-            // margin: 5%;
-            // width: 10vw;
-        }
+        // &-div {
+        //     // margin: 5%;
+        //     // width: 10vw;
+        // }
 
         button,
         input {
@@ -126,4 +126,31 @@
     //     }
 
     // }
+}
+
+.table-edit {
+    position: relative;
+
+    // button {
+    //     // width: 25%;
+    // }
+
+    img {
+        width: 48px;
+    }
+
+    &__elements {
+        background-color: rgb(231, 230, 230);
+        padding: 0.5ch;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 30px;
+        z-index: 100;
+
+        &--add-edit,
+        &--delete {
+            display: flex;
+        }
+    }
 }
