--- a/client/src/style/dashboard/_index.scss
+++ b/client/src/style/dashboard/_index.scss
@@ -4,6 +4,7 @@
 @import './editProject';
 @import './addProject';
 @import './projectList';
+@import './addPost';
 
 .big_header {
     text-align: center;
