--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import "./vars/vars";
 
 body {
     font-family: "Rubik", sans-serif;
     margin: 0 auto;
     padding: 0;
-    max-width: 1300px; 
+}
+
+.container {
+    max-width: 1440px; 
+    min-width: 320px;
+    margin: 0 auto;
 }
 
 @import './auth/auth';
